# c_oo_style

./: CMakeLists.txt  README.md  animal.c  animal.h  big_animal.c  big_animal.h  c_oo_style.c  std.h
